banking-app/fault-injection/account-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: account
  namespace: banking-app
spec:
  hosts:
    - account.banking-app.svc.cluster.local
  http:
    - name: "account-v1-route"
      fault:
        abort:
          httpStatus: 504
          percentage:
            value: 100
      route:
        - destination:
            host: account.banking-app.svc.cluster.local
